<resources>
    <string name="app_name">JustJava</string>
    <string name="_0">0</string>
    <string name="_£0">£0</string>
    <string name="quantity">Quantity</string>
    <string name="button">order</string>
    <string name="price">order summary</string>
    <string name="buttonplus">+</string>
    <string name="buttonminus">-</string>
    <string name="toppings">toppings</string>
    <string name="whippedcream">Whipped cream</string>
    <string name="chocolateTopping">Chocolate topping</string>
    <string name="customerName">Customer name</string>
</resources>
